# Trajectory_planning

./: .gitmodules  CMakeLists.txt  Makefile  Readme.md
DataSET/: CMakeLists.txt  Data.cpp  Data.h
Frenet /: CMakeLists.txt  Frenet.cpp  Frenet.h
Frenet-Cart/: CMakeLists.txt  Fre_Cart.cpp  Fre_Cart.h
FrenetVEH/: CMakeLists.txt  Frenet.cpp  Frenet.h  Readme.md
MPC/: CMakeLists.txt
OPT/: CMakeLists.txt  Kinematicmodel.cpp  Kinematicmodel.h  Optimize.cpp  Optimize.h
Source/: CMakeLists.txt  main.cpp
TestTrack/: course_x.txt  course_y.txt
